; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/radio/extr_radio-si4713.c_radio_si4713_g_audout.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/radio/extr_radio-si4713.c_radio_si4713_g_audout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.v4l2_audioout = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i8*, %struct.v4l2_audioout*)* @radio_si4713_g_audout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @radio_si4713_g_audout(%struct.file* %0, i8* %1, %struct.v4l2_audioout* %2) #0 {
  %4 = alloca %struct.file*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.v4l2_audioout*, align 8
  %7 = alloca i32, align 4
  store %struct.file* %0, %struct.file** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.v4l2_audioout* %2, %struct.v4l2_audioout** %6, align 8
  %8 = load %struct.v4l2_audioout*, %struct.v4l2_audioout** %6, align 8
  %9 = call i32 @radio_si4713_fill_audout(%struct.v4l2_audioout* %8)
  store i32 %9, i32* %7, align 4
  %10 = load %struct.v4l2_audioout*, %struct.v4l2_audioout** %6, align 8
  %11 = getelementptr inbounds %struct.v4l2_audioout, %struct.v4l2_audioout* %10, i32 0, i32 0
  store i64 0, i64* %11, align 8
  %12 = load i32, i32* %7, align 4
  ret i32 %12
}

declare dso_local i32 @radio_si4713_fill_audout(%struct.v4l2_audioout*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
